# Expression_Differentiator

./: .clangd  .gitignore  BENCHMARKS.md  CMakeLists.txt  NOTES.md  README.md  REFERENCES.md  benchmark.cpp  expression_differentiator.hpp  expressions.hpp  generators.cpp  generators.hpp  main.cpp  matrix.cpp  matrix.hpp  notes_by_ai.txt  operations.cpp  operations.hpp  tests.cpp
.claude/: settings.local.json
.github/workflows/: benchmark-manual.yml  cmake-multi-platform.yml  main.yml
benchmarks/: BENCHMARKS.md  benchmark.cpp  benchmark_compare.cpp
build_compare/: benchmarks_compare
docs/: ad_jacobian.md  ad_jacobian.tex
include/: derivative.hpp  dual.hpp  equation.hpp  expression_differentiator.hpp  expressions.hpp  gradient.hpp  matrix.hpp  operations.hpp  procvar.hpp  soequations.hpp  solver.hpp  taylor_dual.hpp  traits.hpp  values.hpp  vector_equation.hpp
include/expression_template/: equation.hpp  expressions.hpp  soequations.hpp  traits.hpp  values.hpp
include/solver/: solver.hpp
minimizer/: CMakeLists.txt
minimizer/include/minimizer/: amoeba.hpp  anneal.hpp  bfgs.hpp  bracketmethod.hpp  brent.hpp  dbrent.hpp  detail.hpp  dlinmin.hpp  frprmn.hpp  golden.hpp  levmar.hpp  linmin.hpp  minimizer.hpp  powell.hpp
minimizer/src/: minimizer.cpp
minimizer/tests/: minimizer_tests.cpp
scripts/: summarize_traces.py
src/: main.cpp  solver.cpp
